force-app/main/default/objects/IOM_Item__c/IOM_Item__c.object-meta.xml
<CustomObject>
    <label>IOM Item</label>
    <nameField>
        <displayFormat>IO-{00000}</displayFormat>
        <label>IOM Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOM Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>