force-app/main/default/objects/IOM_Item__c/fields/Actual_Sold_Rate_Base__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sold_Rate_Base__c</fullName>
    <formula>Unit__r.Booking__r.Quotation__r.Original_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sold Rate (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>