force-app/main/default/objects/IOM_Item__c/fields/Amount_Paid_New__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_New__c</fullName>
    <label>Amount Paid (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>