force-app/main/default/objects/IOM_Item__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>Unit__r.RW_Booking_Date__c</formula>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>