force-app/main/default/objects/IOM_Item__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>