force-app/main/default/objects/IOM_Item__c/fields/Brokerage_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount1__c</fullName>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>