force-app/main/default/objects/IOM_Item__c/fields/Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount__c</fullName>
    <formula>Unit__r.Booking__r.Brokerage1_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>