force-app/main/default/objects/IOM_Item__c/fields/Cancelled_Customer_CIF_No__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Customer_CIF_No__c</fullName>
    <label>Cancelled Customer CIF No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>