force-app/main/default/objects/IOM_Item__c/fields/Closing_SM__c.field-meta.xml
<CustomField>
    <fullName>Closing_SM__c</fullName>
    <label>Closing SM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>