force-app/main/default/objects/IOM_Item__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Unit__r.RW_Customer__r.Name</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>