force-app/main/default/objects/IOM_Item__c/fields/Deduction_from_AGV__c.field-meta.xml
<CustomField>
    <fullName>Deduction_from_AGV__c</fullName>
    <formula>IF( Registration_Status__c == &apos;Unregistered&apos;, (0.02 *  Agreement_Value__c ), ( IF(Registration_Status__c == &apos;Registered&apos;, (0.1 *  Agreement_Value__c ), 0) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deduction from AGV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>