force-app/main/default/objects/IOM_Item__c/fields/Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount__c</fullName>
    <formula>IF( ISPICKVAL(Refunded_Forfeited1__c , &apos;Forfeited&apos;) ,  Amount_Paid__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>