force-app/main/default/objects/IOM_Item__c/fields/GST_Loss__c.field-meta.xml
<CustomField>
    <fullName>GST_Loss__c</fullName>
    <label>GST Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>