force-app/main/default/objects/IOM_Item__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <formula>Unit__r.Booking__r.RW_Total_Interest__c +  Unit__r.Booking__r.RW_GST_On_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>