force-app/main/default/objects/IOM_Item__c/fields/IOM__c.field-meta.xml
<CustomField>
    <fullName>IOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IOM</label>
    <referenceTo>IOM__c</referenceTo>
    <relationshipLabel>IOM Item</relationshipLabel>
    <relationshipName>IOM_Item</relationshipName>
    <type>Lookup</type>
</CustomField>