force-app/main/default/objects/IOM_Item__c/fields/New_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Agreement_Value__c</fullName>
    <label>New Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>