force-app/main/default/objects/IOM_Item__c/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <label>New Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>