force-app/main/default/objects/IOM_Item__c/fields/New_Customer_CIF_No__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_CIF_No__c</fullName>
    <label>New Customer CIF No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>