force-app/main/default/objects/IOM_Item__c/fields/Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss__c</fullName>
    <formula>New_Agreement_Value__c -  Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit &amp; Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>