force-app/main/default/objects/IOM_Item__c/fields/Rate_Difference__c.field-meta.xml
<CustomField>
    <fullName>Rate_Difference__c</fullName>
    <formula>Actual_Sold_Rate_Base__c - Current_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>