force-app/main/default/objects/IOM_Item__c/fields/Refunded_Forfeited1__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Forfeited1__c</fullName>
    <label>Refunded / Forfeited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfeited</fullName>
            </value>
            <value>
                <fullName>To be Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>