force-app/main/default/objects/IOM_Item__c/fields/Refunded_Forfeited__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Forfeited__c</fullName>
    <formula>IF( Refund_Amount__c &gt; 0, &quot;To be Refunded&quot;, &quot;Forfeited&quot;)</formula>
    <label>Refunded / Forfeited</label>
    <type>Text</type>
</CustomField>