force-app/main/default/objects/IOM_Item__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>IF(  ISPICKVAL(Unit__r.Booking__r.RW_Registration_Done__c, &quot;Yes&quot;) , &quot;Registered&quot;, &quot;Unregistered&quot;)</formula>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>