force-app/main/default/objects/IOM_Item__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <formula>Unit__r.Booking__r.RW_Remarks__c</formula>
    <label>Remark</label>
    <type>Text</type>
</CustomField>