force-app/main/default/objects/IOM_Item__c/fields/Resale_Status__c.field-meta.xml
<CustomField>
    <fullName>Resale_Status__c</fullName>
    <label>Resale Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>