force-app/main/default/objects/IOM_Item__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>Unit__r.Relationship_Manager__r.Name</formula>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>