force-app/main/default/objects/IOM_Item__c/fields/SAP_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Id__c</fullName>
    <formula>Unit__r.Booking__r.Opportunity__r.SAP_Customer_Number__c</formula>
    <label>SAP Id</label>
    <type>Text</type>
</CustomField>