force-app/main/default/objects/IOM_Item__c/fields/SDR_Paid_by_Runwal__c.field-meta.xml
<CustomField>
    <fullName>SDR_Paid_by_Runwal__c</fullName>
    <formula>Unit__r.Booking__r.Stamp_duty_payable_by_Runwal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Paid by Runwal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>