force-app/main/default/objects/IOM_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipName>IOM</relationshipName>
    <type>Lookup</type>
</CustomField>