force-app/main/default/objects/IOM_Item__c/fields/X1st_Attempt_Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>X1st_Attempt_Reason_For_Cancellation__c</fullName>
    <label>1st Attempt Reason For Cancellation</label>
    <type>TextArea</type>
</CustomField>