force-app/main/default/objects/IOM_Item__c/fields/X2nd_Attempt_Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Attempt_Reason_For_Cancellation__c</fullName>
    <label>2nd Attempt Reason For Cancellation</label>
    <type>TextArea</type>
</CustomField>